SQL-Testfunktion eingefügt.
- Kommentierung der Funktion angehängt.
- Treiber eingebunden.
- Jigloo-GUI Initialisierung entfernt und ersetzt durch Standardkonstruktor.

--- a/README
+++ b/README
@@ -22,10 +22,10 @@ Dennis:
 
 
 // Legende der Todo Liste:
-// + == Wurde dem Projekt hinzugefügt
+// + == Wurde dem Projekt hinzugefügt.
 // ~ == An dieser Baustelle im Projekt arbeitet ihr zur Zeit
 // * == Anstehende Arbeiten am Projekt die ihr aber noch nicht begonnen habt.
-// - == Verworfene Arbeiten am Projekt
+// - == Verworfene Arbeiten am Projekt.
 
 
 */
