--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 /* 
 Das ist unsere Platform in der wir das Java-Projekt für die FH fertigstellen!
 Beachtet, solltet ihr eure Arbeit hochladen, dass ihr vorher guckt ob jemand vor euch etwas in einer Datei verändert hat in der ihr arbeitet.
-Vor dem Hochladen solltet ihr also eure Arbeit mit der neuen Datei zusammenführen um so die Arbeit vom Vorgänger nicht zu überschreiben!
+Vor dem Hochladen solltet ihr also eure Arbeit mit Git synchronisieren, um so die Arbeit vom Vorgänger nicht zu überschreiben!
 
 Bitte editiert euren Bereich in der Todo Liste, damit jeder auf dem Laufenden ist wo ihr gerade steht!
 
@@ -15,9 +15,9 @@ Claudio:
 Dennis:
 
 + Allgemein: Einbinden der SQL-Schnittstelle und einbauen von Schnittstellen zur GUI.
++ Bestellungspanel: Aufbau des Bestellungspanels.
 
-~ Bestellungspanel: Aufbau des Bestellungspanels.
-* Bestellungspanel: Funktionen für die Benutzeraktionen einfügen.
+~ Bestellungspanel: Funktionen für die Benutzeraktionen einfügen.
 
 
 
